fixing font size and align

--- a/Release/styles/maps.css
+++ b/Release/styles/maps.css
@@ -123,6 +123,8 @@
 
    .tabs {
       height: 100%;
+      font-size: 10px;
+      text-align: center;
    }
 
    #contentContainer {
